[gd_scene load_steps=8 format=3 uid="uid://b4g3h5n6v8t2m"]

[ext_resource type="Script" path="res://main_controller.gd" id="1_main"]
[ext_resource type="Script" path="res://visualization/turn_layer_environment.gd" id="2_layers"]
[ext_resource type="Script" path="res://turn_system.gd" id="3_turns"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_horizon_color = Color(0.1, 0.2, 0.4, 1)
ground_bottom_color = Color(0.05, 0.1, 0.2, 1)
ground_horizon_color = Color(0.1, 0.15, 0.3, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
background_color = Color(0.05, 0.05, 0.1, 1)
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.3, 0.5, 1)
ambient_light_energy = 0.3
fog_enabled = true
fog_light_color = Color(0.1, 0.2, 0.4, 1)
fog_sun_scatter = 0.1
fog_density = 0.01
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_intensity = 0.8
glow_strength = 1.2
glow_blend_mode = 1

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1"]
exposure_multiplier = 1.2

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")
camera_attributes = SubResource("CameraAttributesPractical_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
light_energy = 0.8
shadow_enabled = true

[node name="TurnLayerEnvironment" type="Node3D" parent="."]
script = ExtResource("2_layers")

[node name="TurnSystemController" type="Node" parent="."]
script = ExtResource("3_turns")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InfoPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0
modulate = Color(1, 1, 1, 0.8)

[node name="TurnInfo" type="RichTextLabel" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[b]12 TURNS SYSTEM[/b]

Current Turn: 5 (Awakening)
Phase: Recognition of self
Dimension: 4D (Time)

[color=cyan]Controls:[/color]
N - Toggle layer view
Space - Advance turn
Tab - Focus next layer
F - Auto-frame view"

[node name="DebugInfo" type="Label" parent="UI"]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
text = "FPS: 0
Threads: 0/0
Words: 0"